# NONOS kernel — ZeroState microkernel.
# eK@nonos.systems
#
# `cargo build` resolves to `default = ["microkernel-core"]` — the
# brutal-minimum boot/runtime profile, what plain `cargo check`
# compiles on a clean tree.
#
# Profile cheat sheet:
#   microkernel-core              boot, sched, IPC, ELF, manifest verifier
#   microkernel-capsules          + proof_io + ramfs + keyring capsules
#   microkernel-keyring-smoketest + boot-time keyring round trip
#   microkernel                   alias for the runtime baseline
#                                 (currently `microkernel-capsules`)
#
# The legacy monolithic profile lives in
# `docs/legacy/Cargo.monolithic.toml` and is not declared here. New
# work lands in `microkernel-core` or as a userland capsule.
#
# Every feature below is referenced by source (via `cfg(feature = ...)`)
# or composes a profile. Decorative flags do not belong in this file.

[package]
name = "nonos_kernel"
version = "0.8.4"
edition = "2021"
publish = false
license = "AGPL-3.0"
authors = ["eK@nonos.systems", "senseix21 <mahdix2118@protonmail.com>"]
description = "NØNOS ZeroState microkernel - RAM-resident, capability-enforced, signed capsules"
repository = "https://github.com/NON-OS/nonos-kernel"
build = "build.rs"
keywords = ["kernel", "microkernel", "os", "security", "privacy"]
categories = ["os", "no-std", "embedded"]
resolver = "2"

[lib]
name = "nonos_kernel"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "nonos-kernel"
path = "src/nonos_main.rs"
harness = false

[features]
default = ["microkernel-core"]

# Migration gate. When on, the legacy subsystems outside the trusted
# path compile in: vault, in-kernel network stack and onion/nym,
# desktop/graphics tree, kernel-resident `*_service` wrappers,
# modules/sdk/lang/nox/npkg trees. CI rejects this from any
# microkernel-* profile (see tools/ci/check-feature-profiles.py).
nonos-legacy-tree = []

# Legacy Linux-shaped keyring syscall family (add_key/request_key/keyctl)
# over an in-kernel BTreeMap. The live keyring authority is the userland
# capsule (`src/security/keyring_capsule`); this gate re-enables the
# parallel in-kernel surface for legacy callers only. CI rejects this
# from any microkernel-* profile.
nonos-syscall-keyring = []

# Bootstrap. `kernel` switches malloc/free to Rust `alloc` (libc sbrk
# does not exist in kernel space). `standalone` brings in the panic
# handler and global allocator.
kernel = []
standalone = ["kernel"]

# Target architecture label for the microkernel-core profile.
arch-x86_64 = []

# Runtime subsystem.
sched = []

# Embed and spawn the proof_io userland capsule at boot.
# Path: userland/capsule_proof_io/target/x86_64-nonos-user/release/proof_io.
nonos-capsule-proof-io = []

# Embed and spawn the ramfs userland capsule.
# Path: userland/capsule_ramfs/target/x86_64-nonos-user/release/ramfs.
nonos-capsule-ramfs = []

# Boot-time ramfs round trip: open / write / read / truncate / close
# against the spawned ramfs capsule, emits PASS/FAIL on serial.
nonos-ramfs-smoketest = ["nonos-capsule-ramfs"]

# Embed and spawn the wallpaper capsule. Phase-3 graphics proof.
# Path: userland/capsule_wallpaper/target/x86_64-nonos-user/release/wallpaper.
nonos-capsule-wallpaper = []

# Embed and spawn the keyring userland capsule.
# Path: userland/capsule_keyring/target/x86_64-nonos-user/release/keyring.
nonos-capsule-keyring = []

# Boot-time keyring round trip: drives every client op, asserts the
# documented errno mapping on the deny paths, emits PASS/FAIL on serial.
nonos-keyring-smoketest = ["nonos-capsule-keyring"]

# Brutal-minimum kernel profile. Each entry closes a real boundary:
#   kernel, standalone   no-std bootstrap and panic handler routing
#   arch-x86_64          target arch
#   sched                src/entry/kernel_main.rs enters the scheduler
#   sha3                 src/memory/kaslr/manager/entropy.rs imports
#                        `sha3` unconditionally; the optional dep must
#                        be pulled in or the build fails
#   crypto-ed25519-int   satisfies the `compile_error!` guard in
#                        src/crypto/application/nonos_signing.rs and
#                        provides the production manifest verifier
microkernel-core = [
  "kernel",
  "standalone",
  "arch-x86_64",
  "sched",
  "sha3",
  "crypto-ed25519-int",
]

# microkernel-core + the three live capsule embeds. Userland binaries
# must be built first or the `include_bytes!` paths fail. The Makefile
# wrapper `kernel-with-keyring` builds userland then the kernel.
microkernel-capsules = [
  "microkernel-core",
  "nonos-capsule-proof-io",
  "nonos-capsule-ramfs",
  "nonos-capsule-keyring",
]

# Verification profile. Adds the keyring smoketest on top of capsules.
# `tests/boot/keyring_round_trip.sh` consumes the serial markers.
microkernel-keyring-smoketest = [
  "microkernel-capsules",
  "nonos-keyring-smoketest",
]

# Runtime baseline alias. Production microkernel builds resolve to
# `microkernel-capsules`, not the smoketest profile.
microkernel = ["microkernel-capsules"]

# Mid-refactor gates referenced by `cfg(feature = "...")` in source.
# Off by default; turn on per family when working on it.
nonos-arch-hardening        = []   # src/arch/x86_64/security/{kpti,stack,spectre}
nonos-arch-iommu            = []   # src/arch/x86_64/iommu/*
nonos-experimental-syscalls = []   # src/syscall/{kcmp,pidfd,io_uring,...}
nonos-fbcon                 = []   # src/drivers/fbcon/*
nonos-fs-locking            = []   # src/fs/locking/*
nonos-secureboot            = []   # src/security/boot/*
nonos-storage-cache         = []   # src/storage/cache/*

# In-tree crypto, audit-anchored constant-time implementations.
crypto-ed25519-int   = []
crypto-ed25519-dalek = ["ed25519-dalek"]
crypto-curve25519    = ["curve25519-dalek", "x25519-dalek"]

# Post-quantum. NIST FIPS 203 (ML-KEM, ex-Kyber) and FIPS 204 (ML-DSA,
# ex-Dilithium). The 768 / level-3 variants are the recommended
# defaults at ~AES-192 strength.
mlkem512  = []
mlkem768  = []
mlkem1024 = []
mldsa2    = []
mldsa3    = []
mldsa5    = []

# Zero-knowledge proof systems. Groth16 needs trusted setup; Halo2 does
# not. Source paths: src/crypto/zk/groth16/*, src/crypto/zk/halo2/*.
zk-groth16 = ["ark-bn254", "ark-groth16", "ark-serialize", "ark-ff", "ark-ec", "ark-std"]
zk-halo2   = ["halo2_proofs", "halo2curves"]

# Compression for capsule artefacts and signed-blob round trips.
nonos-brotli = ["brotli-decompressor"]

# Legacy hash, retained only for Git object hashes / TOTP.
sha1-legacy = []

# Host tooling. Enables std for running tests on the host system.
std = ["rand", "nonos-brotli"]

[dependencies]

# Synchronization. spin is the kernel-wide lock primitive (no_std,
# interrupt-safe).
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex", "lazy", "rwlock"] }
lazy_static = { version = "1.4", features = ["spin_no_std"] }

# Allocator.
linked_list_allocator = { version = "0.10", default-features = false, features = ["use_spin"] }

# Collections. hashbrown uses ahash (faster than SipHash for our load).
hashbrown = { version = "0.14", default-features = false, features = ["ahash"] }
arrayvec  = { version = "0.7",  default-features = false }
smallvec  = { version = "1.15", default-features = false }
bitvec    = { version = "1.0",  default-features = false, features = ["alloc"] }

# External crypto (optional; in-tree implementations are the default).
ed25519-dalek    = { version = "2.1.1", default-features = false, features = ["alloc", "zeroize"], optional = true }
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["alloc", "zeroize"], optional = true }
x25519-dalek     = { version = "2",     default-features = false, features = ["static_secrets"], optional = true }
sha3             = { version = "0.10",  default-features = false, optional = true }

# Core utilities.
bitflags = { version = "2.4", default-features = false }
cfg-if   = { version = "1.0", default-features = false }
libm     = { version = "0.2", default-features = false }
volatile = { version = "0.4", default-features = false }
heapless = { version = "0.8", default-features = false }

# Hashing.
blake3 = { version = "1.0",  default-features = false }
sha2   = { version = "0.10", default-features = false, features = ["force-soft"] }

# Boot protocol.
bootloader_api = { version = "0.11", default-features = false }

# Compression.
miniz_oxide         = { version = "0.7",  default-features = false, features = ["with-alloc"] }
lz4_flex            = { version = "0.11", default-features = false, features = ["safe-decode"] }
brotli-decompressor = { version = "4",    default-features = false, optional = true }

# Network stack (smoltcp is gated behind the legacy tree at the source
# level; the dep stays so legacy builds resolve).
smoltcp = { version = "0.11", default-features = false, features = ["alloc", "socket-raw", "socket-udp", "socket-tcp", "proto-ipv4", "proto-ipv6", "medium-ethernet"] }

# Host testing only.
rand = { version = "0.8", default-features = true, optional = true }

# Zero-knowledge — arkworks (Groth16).
ark-bn254     = { version = "0.4", default-features = false, features = ["curve"], optional = true }
ark-groth16   = { version = "0.4", default-features = false, optional = true }
ark-serialize = { version = "0.4", default-features = false, features = ["derive"], optional = true }
ark-ff        = { version = "0.4", default-features = false, optional = true }
ark-ec        = { version = "0.4", default-features = false, optional = true }
ark-std       = { version = "0.4", default-features = false, optional = true }

# Zero-knowledge — halo2.
halo2_proofs = { version = "0.3", default-features = false, optional = true }
halo2curves  = { version = "0.6", default-features = false, optional = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.14", default-features = false, features = ["abi_x86_interrupt", "instructions"] }

[target.'cfg(not(target_arch = "x86_64"))'.dependencies]
blake3 = { version = "1.0", default-features = false, features = ["pure"] }

[build-dependencies]
blake3        = { version = "1.5",  default-features = false }
cc            = "1.1"
glob          = "0.3"
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["alloc", "zeroize"] }
sha2          = { version = "0.10", default-features = false }

[dev-dependencies]
hex-literal = "0.4"
hex         = "0.4"

[lints.rust]
unused_imports         = "warn"
unused_variables       = "warn"
unused_mut             = "warn"
dead_code              = "warn"
unreachable_pub        = "warn"
unsafe_op_in_unsafe_fn = "warn"
unexpected_cfgs        = "deny"

[lints.clippy]
all         = "warn"
correctness = "deny"
suspicious  = "warn"
complexity  = "warn"
perf        = "warn"

# Machine-readable kernel ABI metadata for the bootloader and tooling.
[package.metadata.nonos]
zerostate = true
version   = "0.8.4"
abi       = "v0"

[package.metadata.nonos.vm]
higher_half  = "0xffff_8000_0000_0000"
heap_min     = "2MiB"
heap_max     = "1GiB"
stack_size   = "64KiB"
max_threads  = 1024

[package.metadata.nonos.security]
wx_enforced    = true
nx_stack       = true
smep           = true
smap           = true
kaslr          = true
cet            = true
stack_canaries = true
heap_guards    = true

[package.metadata.nonos.caps]
available = ["LOG", "YIELD", "TIME", "IPC", "KSTAT", "NET", "FS", "PROC", "MEM", "CRYPTO"]

[package.metadata.nonos.syscall]
gateway = "int80"
numbers = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
names   = ["EXIT", "LOG_WRITE", "YIELD", "TIME_NOW", "READ", "WRITE", "OPEN", "CLOSE", "MMAP", "MUNMAP"]

[package.metadata.nonos.capsule]
format    = "ELF64"
signature = "ed25519"
hash      = "sha3-256"
max_size  = "16MiB"

# Release profile. lto="thin" + codegen-units=4 trades a small final
# binary win for faster link during dev. For an end-of-cycle release
# build, switch to lto="fat" + codegen-units=1.
[profile.release]
opt-level       = 3
lto             = "thin"
codegen-units   = 4
panic           = "abort"
strip           = "debuginfo"
debug           = false
overflow-checks = false

[profile.release.package."*"]
opt-level     = 3
codegen-units = 4

# Dev profile. opt-level=1 because 0 is intolerable at runtime.
# Dependencies stay at opt-level=2 so they do not dominate the trace.
[profile.dev]
opt-level       = 1
panic           = "abort"
debug           = true
overflow-checks = true

[profile.dev.package."*"]
opt-level = 2

# Bench profile. Full optimisation with debug info for perf/flamegraph.
[profile.bench]
opt-level = 3
lto       = "thin"
debug     = true
