# NØNOS kernel — upper-half microkernel.
# eK@nonos.systems
#
# Static ET_EXEC kernel handed off by the UEFI bootloader. The kernel
# is mapped at PML4[511] (`0xffff_ffff_8000_0000`); the 256 GiB
# directmap lives at PML4[256] (`0xffff_8000_0000_0000`); PML4[0] is
# cleared post-handoff and must stay cleared. Capsules run at CPL=3
# in their own ASID; the kernel reaches user pages through the
# directmap, never by switching CR3 to the user table.
#
# `cargo build` resolves to `default = ["microkernel-core"]` — the
# brutal-minimum boot/runtime profile, what plain `cargo check`
# compiles on a clean tree.
#
# Profile cheat sheet:
#   microkernel-core              boot, sched, IPC, ELF, capability
#                                 boundary, SYSCALL/SYSRET trap path,
#                                 manifest verifier
#   microkernel-capsules          + proof_io + ramfs + keyring capsules
#   microkernel-keyring-smoketest + boot-time keyring round trip
#   microkernel                   alias for the runtime baseline
#                                 (currently `microkernel-capsules`)
#
# Every feature here is referenced by source (via `cfg(feature = ...)`)
# or composes a profile. Decorative flags do not belong in this file.
# A smoketest profile name does not imply the corresponding boot has
# passed; only the serial markers in `tests/boot/*.sh` do.

[package]
name        = "nonos_kernel"
version     = "0.8.4"
edition     = "2021"
publish     = false
license     = "AGPL-3.0"
authors     = ["eK@nonos.systems", "senseix21 <mahdix2118@protonmail.com>"]
description = "NØNOS upper-half microkernel — RAM-resident, capability-enforced, signed CPL=3 capsules"
repository  = "https://github.com/NON-OS/nonos-micro-kernel"
build       = "build.rs"
keywords    = ["kernel", "microkernel", "os", "security", "privacy"]
categories  = ["os", "no-std", "embedded"]
resolver    = "2"

[lib]
name       = "nonos_kernel"
path       = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name    = "nonos-kernel"
path    = "src/nonos_main.rs"
harness = false

[features]
default = ["microkernel-core"]

# Bootstrap. `kernel` switches malloc/free to Rust `alloc`; `standalone`
# brings in the panic handler and global allocator.
kernel     = []
standalone = ["kernel"]

# Target architecture label.
arch-x86_64 = []

# Runtime subsystem.
sched = []

# Userland capsule embeds. Each `nonos-capsule-*` feature embeds the
# named capsule binary and arms the kernel-side spawner. Every name
# below maps 1:1 to a capsule directory under `userland/`.
nonos-capsule-proof-io          = []
nonos-capsule-ramfs             = []
nonos-capsule-wallpaper         = []
nonos-capsule-compositor        = []
nonos-capsule-desktop-shell     = []
nonos-capsule-wm                = []
nonos-capsule-toolkit           = []
nonos-capsule-about             = []
nonos-capsule-keyring           = []
nonos-capsule-entropy           = []
nonos-capsule-crypto            = []
nonos-capsule-vfs               = []
nonos-capsule-driver-virtio-rng = []
nonos-capsule-driver-virtio-blk = []
nonos-capsule-driver-virtio-gpu = []
nonos-capsule-driver-virtio-net = []
nonos-capsule-driver-ps2-input  = []
nonos-capsule-driver-xhci       = []
nonos-capsule-driver-usb-hid    = []
nonos-capsule-driver-usb-msc    = []
nonos-capsule-driver-e1000      = []
nonos-capsule-driver-i2c-pci    = []
nonos-capsule-driver-i2c-hid    = []
nonos-capsule-driver-iwlwifi    = []
nonos-capsule-driver-rtl8139    = []
nonos-capsule-driver-rtl8169    = []
nonos-capsule-driver-ahci       = []
nonos-capsule-driver-hda        = []
nonos-capsule-driver-nvme       = []
nonos-capsule-net-l2            = []
nonos-capsule-net-ip            = []
nonos-capsule-net-udp           = []
nonos-capsule-net-dhcp          = []
nonos-capsule-market            = []

# Compile the in-kernel selftest runner that drives every
# `boot::tests::*::all_pass()` group. Off by default; enabling it
# wires `boot::tests::selftest::run_all` into the kernel image and
# adds a single call site on the active boot path that prints
# PASS/FAIL on the serial. No production boot behaviour changes
# unless this feature is on.
nonos-selftest = []

# Production posture. Excludes the legacy unverified spawn path:
# `runner::legacy`, the `CapsuleSpec` legacy struct, and every
# capsule still wired through them are cfg-gated off. Only capsules
# that go through `spawn_verified` (proof_io today) compile under
# this feature. Mutex with `nonos-dev-unverified-capsules` is
# enforced by the `compile_error!` in `lib.rs`.
nonos-production = []

# Escape hatch for development that still needs the legacy
# unverified spawn path. Mutually exclusive with `nonos-production`
# (see the `compile_error!` in `lib.rs`). Never part of any default
# or smoketest profile; opt-in only.
nonos-dev-unverified-capsules = []

# Pre-iretq audit. The scheduler walks the target CR3 through the
# directmap and proves the kernel halves, the user RIP leaf, the
# user RSP leaf, TSS.RSP0 and the PF/GP IST stacks before iretq. On
# any failure the kernel prints `[USER-PROOF] FAIL ...` and halts
# instead of triple-faulting blindly. Every smoketest profile turns
# this on; production builds keep it off so the audit cost stays
# bounded to the lanes that watch serial.
nonos-user-entry-proof = []

# Boot smoketests. Each one drives a real round trip on the boot
# serial and emits PASS/FAIL markers consumed by the matching
# `tests/boot/*.sh` harness.
nonos-ramfs-smoketest             = ["nonos-capsule-ramfs", "nonos-user-entry-proof"]
nonos-keyring-smoketest           = ["nonos-capsule-keyring", "nonos-user-entry-proof"]
nonos-entropy-smoketest           = ["nonos-capsule-entropy", "nonos-user-entry-proof"]
nonos-crypto-hash-smoketest       = ["nonos-capsule-crypto", "nonos-user-entry-proof"]
nonos-vfs-smoketest               = ["nonos-capsule-vfs", "nonos-user-entry-proof"]
nonos-driver-virtio-rng-smoketest = ["nonos-capsule-driver-virtio-rng", "nonos-user-entry-proof"]
nonos-driver-virtio-blk-smoketest = ["nonos-capsule-driver-virtio-blk", "nonos-user-entry-proof"]
nonos-driver-virtio-net-smoketest = ["nonos-capsule-driver-virtio-net", "nonos-user-entry-proof"]
nonos-driver-ps2-input-smoketest  = ["nonos-capsule-driver-ps2-input", "nonos-user-entry-proof"]
nonos-driver-xhci-smoketest       = ["nonos-capsule-driver-xhci", "nonos-user-entry-proof"]
nonos-driver-e1000-smoketest      = ["nonos-capsule-driver-e1000", "nonos-user-entry-proof"]
nonos-market-smoketest            = ["nonos-capsule-market", "nonos-user-entry-proof"]
nonos-wallpaper-smoketest         = ["nonos-capsule-wallpaper", "nonos-user-entry-proof"]

# Brutal-minimum kernel profile. Each entry closes a real boundary:
#   kernel, standalone   no-std bootstrap and panic handler routing
#   arch-x86_64          target arch
#   sched                src/entry/kernel_main.rs enters the scheduler
#   sha3                 KASLR entropy path imports `sha3` unconditionally
#   crypto-ed25519-int   in-tree manifest verifier (Ed25519)
microkernel-core = [
  "kernel",
  "standalone",
  "arch-x86_64",
  "sched",
  "sha3",
  "crypto-ed25519-int",
]

# Runtime baseline: core + the three live capsule embeds.
microkernel-capsules = [
  "microkernel-core",
  "nonos-capsule-proof-io",
  "nonos-capsule-ramfs",
  "nonos-capsule-keyring",
]

# Per-capsule production profiles. Each builds a kernel under the
# `nonos-production` posture (verified-only spawn path, dev-unverified
# locked out) with proof_io baked in plus the named capsule. These
# are the kernel build path for everything that is not the smoketest
# harness; the matching `nonos-mk-<slug>-prod` Makefile recipes
# invoke them.
microkernel-proof-io = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
]

microkernel-ramfs = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-ramfs",
]

microkernel-keyring = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-keyring",
]

microkernel-entropy = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-entropy",
]

microkernel-crypto = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-crypto",
]

microkernel-vfs = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-vfs",
]

microkernel-market = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-market",
]

microkernel-driver-virtio-rng = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-virtio-rng",
]

microkernel-driver-virtio-blk = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-virtio-blk",
]

microkernel-driver-virtio-gpu = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-virtio-gpu",
]

microkernel-driver-virtio-net = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-virtio-net",
]

microkernel-driver-iwlwifi = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-iwlwifi",
]

microkernel-driver-i2c-pci = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-i2c-pci",
]

microkernel-driver-i2c-hid = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-i2c-pci",
  "nonos-capsule-driver-i2c-hid",
]

microkernel-driver-ps2-input = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-ps2-input",
]

microkernel-driver-xhci = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-xhci",
]

microkernel-driver-usb-hid = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-xhci",
  "nonos-capsule-driver-usb-hid",
]

microkernel-driver-usb-msc = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-xhci",
  "nonos-capsule-driver-usb-msc",
]

microkernel-driver-e1000 = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-e1000",
]

microkernel-driver-rtl8139 = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-rtl8139",
]

microkernel-driver-rtl8169 = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-rtl8169",
]

microkernel-driver-ahci = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-ahci",
]

microkernel-driver-hda = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-hda",
]

microkernel-driver-nvme = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-nvme",
]

# Network-service capsule profiles. Each one stacks on the lower
# layer it depends on, since a `net.ip` boot without `net.l2`
# would publish a service that immediately fails its setup probe.
microkernel-net-l2 = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-virtio-net",
  "nonos-capsule-net-l2",
]

microkernel-net-ip = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-virtio-net",
  "nonos-capsule-net-l2",
  "nonos-capsule-net-ip",
]

microkernel-net-udp = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-virtio-net",
  "nonos-capsule-net-l2",
  "nonos-capsule-net-ip",
  "nonos-capsule-net-udp",
]

microkernel-net-dhcp = [
  "microkernel-core",
  "nonos-production",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-virtio-net",
  "nonos-capsule-net-l2",
  "nonos-capsule-net-ip",
  "nonos-capsule-net-udp",
  "nonos-capsule-net-dhcp",
]

# Smoketest profiles. The harness scripts under `tests/boot/` are the
# source of truth for PASS/FAIL; the profiles only build the kernel
# with the right capsule + smoketest features turned on.
microkernel-keyring-smoketest = [
  "microkernel-capsules",
  "nonos-keyring-smoketest",
]

microkernel-entropy-smoketest = [
  "microkernel-core",
  "nonos-capsule-proof-io",
  "nonos-capsule-entropy",
  "nonos-entropy-smoketest",
]

microkernel-crypto-hash-smoketest = [
  "microkernel-core",
  "nonos-capsule-proof-io",
  "nonos-capsule-crypto",
  "nonos-crypto-hash-smoketest",
]

microkernel-vfs-smoketest = [
  "microkernel-core",
  "nonos-capsule-proof-io",
  "nonos-capsule-vfs",
  "nonos-vfs-smoketest",
]

microkernel-driver-virtio-rng-smoketest = [
  "microkernel-core",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-virtio-rng",
  "nonos-driver-virtio-rng-smoketest",
]

microkernel-driver-virtio-blk-smoketest = [
  "microkernel-core",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-virtio-blk",
  "nonos-driver-virtio-blk-smoketest",
]

microkernel-driver-virtio-net-smoketest = [
  "microkernel-core",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-virtio-net",
  "nonos-driver-virtio-net-smoketest",
]

microkernel-driver-ps2-input-smoketest = [
  "microkernel-core",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-ps2-input",
  "nonos-driver-ps2-input-smoketest",
]

microkernel-driver-xhci-smoketest = [
  "microkernel-core",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-xhci",
  "nonos-driver-xhci-smoketest",
]

microkernel-driver-e1000-smoketest = [
  "microkernel-core",
  "nonos-capsule-proof-io",
  "nonos-capsule-driver-e1000",
  "nonos-driver-e1000-smoketest",
]

microkernel-market-smoketest = [
  "microkernel-core",
  "nonos-capsule-proof-io",
  "nonos-capsule-market",
  "nonos-market-smoketest",
]

microkernel-wallpaper-smoketest = [
  "microkernel-core",
  "nonos-capsule-wallpaper",
  "nonos-wallpaper-smoketest",
]

# Runtime baseline alias. Resolves to `microkernel-capsules`, never to
# a smoketest profile.
microkernel = ["microkernel-capsules"]

# Mid-refactor cfg gates referenced from src.
nonos-arch-hardening = []   # src/arch/x86_64/security/{kpti,stack,spectre}
nonos-arch-iommu     = []   # src/arch/x86_64/iommu/*
nonos-fs-locking     = []   # src/fs/locking/*

# In-tree crypto, audit-anchored constant-time implementations.
crypto-ed25519-int   = []
crypto-ed25519-dalek = ["ed25519-dalek"]
crypto-curve25519    = ["curve25519-dalek", "x25519-dalek"]

# Post-quantum: NIST FIPS 203 (ML-KEM) and FIPS 204 (ML-DSA). Pulled in
# by the matching cfg-gated source modules; no boot profile turns them
# on yet.
mlkem512  = []
mlkem768  = []
mlkem1024 = []
mldsa2    = []
mldsa3    = []
mldsa5    = []

# Zero-knowledge proof systems. Source paths: src/crypto/zk/groth16/*,
# src/crypto/zk/halo2/*.
zk-groth16 = ["ark-bn254", "ark-groth16", "ark-serialize", "ark-ff", "ark-ec", "ark-std"]
zk-halo2   = ["halo2_proofs", "halo2curves"]

# Legacy hash, retained for Git object hashes / TOTP only.
sha1-legacy = []

# Host-side build. Used by tests that compile against std on the host.
std = []

[dependencies]
# Synchronization. spin is the kernel-wide lock primitive (no_std,
# interrupt-safe).
spin        = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex", "lazy", "rwlock"] }
lazy_static = { version = "1.4", features = ["spin_no_std"] }

# Allocator.
linked_list_allocator = { version = "0.10", default-features = false, features = ["use_spin"] }

# Collections.
smallvec = { version = "1.15", default-features = false }
bitvec   = { version = "1.0",  default-features = false, features = ["alloc"] }
heapless = { version = "0.8",  default-features = false }

# External crypto (optional; in-tree implementations are the default).
ed25519-dalek    = { version = "2.1.1", default-features = false, features = ["alloc", "zeroize"], optional = true }
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["alloc", "zeroize"], optional = true }
x25519-dalek     = { version = "2",     default-features = false, features = ["static_secrets"], optional = true }
sha3             = { version = "0.10",  default-features = false, optional = true }

# Hashing.
blake3 = { version = "1.0",  default-features = false }
sha2   = { version = "0.10", default-features = false, features = ["force-soft"] }

# Core utilities used in the kernel tree.
bitflags = { version = "2.4", default-features = false }
volatile = { version = "0.4", default-features = false }

# Network stack used by the virtio-net interface bridge.
smoltcp = { version = "0.11", default-features = false, features = ["alloc", "socket-raw", "socket-udp", "socket-tcp", "proto-ipv4", "proto-ipv6", "medium-ethernet"] }

# Zero-knowledge — arkworks (Groth16).
ark-bn254     = { version = "0.4", default-features = false, features = ["curve"], optional = true }
ark-groth16   = { version = "0.4", default-features = false, optional = true }
ark-serialize = { version = "0.4", default-features = false, features = ["derive"], optional = true }
ark-ff        = { version = "0.4", default-features = false, optional = true }
ark-ec        = { version = "0.4", default-features = false, optional = true }
ark-std       = { version = "0.4", default-features = false, optional = true }

# Zero-knowledge — halo2.
halo2_proofs = { version = "0.3", default-features = false, optional = true }
halo2curves  = { version = "0.6", default-features = false, optional = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.14", default-features = false, features = ["abi_x86_interrupt", "instructions"] }

[target.'cfg(not(target_arch = "x86_64"))'.dependencies]
blake3 = { version = "1.0", default-features = false, features = ["pure"] }

[build-dependencies]
blake3        = { version = "1.5",  default-features = false }
cc            = "1.1"
glob          = "0.3"
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["alloc", "zeroize"] }
sha2          = { version = "0.10", default-features = false }

[dev-dependencies]
hex-literal = "0.4"
hex         = "0.4"

[lints.rust]
unused_imports         = "warn"
unused_variables       = "warn"
unused_mut             = "warn"
dead_code              = "warn"
unreachable_pub        = "warn"
unsafe_op_in_unsafe_fn = "warn"
unexpected_cfgs        = "deny"

[lints.clippy]
all         = "warn"
correctness = "deny"
suspicious  = "warn"
complexity  = "warn"
perf        = "warn"

# Machine-readable kernel ABI metadata. Edits here must reflect what
# the kernel actually does: numbers come from
# src/syscall/microkernel/numbers.rs, capability names from
# src/capabilities/types.rs.
[package.metadata.nonos]
zerostate = true
version   = "0.8.4"
abi       = "Mk-v0"

[package.metadata.nonos.vm]
directmap_base   = "0xffff_8000_0000_0000"   # PML4[256], 256 GiB phys map
kernel_text_base = "0xffff_ffff_8000_0000"   # PML4[511], static ET_EXEC
pml4_low_cleared = true                       # PML4[0] is zeroed post-handoff
heap_min         = "2MiB"
heap_max         = "1GiB"
stack_size       = "64KiB"
max_threads      = 1024

[package.metadata.nonos.security]
wx_enforced    = true
nx_stack       = true
smep           = true
smap           = true
kaslr          = true
cet            = true
stack_canaries = true
heap_guards    = true

# Capability names match `enum Capability` in src/capabilities/types.rs.
# `Debug` gates the MkDebug syscall.
[package.metadata.nonos.caps]
available = [
  "CoreExec", "IO", "Network", "IPC", "Memory",
  "Crypto", "FileSystem", "Hardware", "Debug", "Admin",
]

# Numeric Mk* surface available at CPL=3. Values mirror
# src/syscall/microkernel/numbers.rs. The gateway is the x86_64
# `syscall` instruction (LSTAR/STAR/SFMASK). There is no int-vector
# gateway and no POSIX fd channel.
[package.metadata.nonos.syscall]
gateway = "x86_64-syscall"
numbers = [
  0x1000, 0x1001, 0x1002,
  0x1010, 0x1011,
  0x1020, 0x1021, 0x1022,
  0x1030, 0x1031, 0x1032,
  0x1040, 0x1041, 0x1042,
  0x1043, 0x1044,
  0x1045, 0x1046, 0x1047, 0x1048,
  0x1049, 0x104A,
  0x104B, 0x104C, 0x104D, 0x104E,
  0x1050,
]
names = [
  "MkIpcSend", "MkIpcRecv", "MkIpcCall",
  "MkMmap", "MkMunmap",
  "MkSpawn", "MkExit", "MkYield",
  "MkCapGrant", "MkCapRevoke", "MkCapCheck",
  "MkDeviceList", "MkDeviceClaim", "MkDeviceRelease",
  "MkMmioMap", "MkMmioUnmap",
  "MkIrqBind", "MkIrqUnbind", "MkIrqAck", "MkIrqPoll",
  "MkDmaMap", "MkDmaUnmap",
  "MkPioGrant", "MkPioRead", "MkPioWrite", "MkPioRelease",
  "MkDebug",
]

[package.metadata.nonos.capsule]
format    = "ELF64"
signature = "ed25519"
hash      = "sha3-256"
max_size  = "16MiB"

# Release: lto="thin" + codegen-units=4 trades a small final-binary
# win for faster link during dev. End-of-cycle release builds switch
# to lto="fat" + codegen-units=1.
[profile.release]
opt-level       = 3
lto             = "thin"
codegen-units   = 4
panic           = "abort"
strip           = "debuginfo"
debug           = false
overflow-checks = false

# Dev: opt-level=1 because 0 is intolerable at runtime; deps stay at 2
# so they do not dominate the trace.
[profile.dev]
opt-level       = 1
panic           = "abort"
debug           = true
overflow-checks = true

[profile.dev.package."*"]
opt-level = 2

[profile.bench]
opt-level = 3
lto       = "thin"
debug     = true
