[package]
name = "nonos-broker-msix-tests"
version = "0.1.0"
edition = "2021"
description = "Host-side test crate that exercises the kernel broker MSI-X bind/release authority by importing the production source via #[path]. Side effects (PCI config writes, MMIO, IO-APIC, LAPIC) are routed through small host-side fixtures so the tests run on a developer machine without QEMU."

[lib]
path = "src/lib.rs"

[dependencies]
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex", "rwlock"] }
