# NONOS userland: capsule_calculator
# eK@nonos.systems
#
# Integer arithmetic with two-decimal-place scaling. Owned state, no
# globals. Keyboard input (0-9, +, -, *, /, =, Enter, ., AC, Esc).
# Real production capsule built on `nonos_app_skeleton`.

[package]
name = "nonos_calculator"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0"
authors = ["eK@nonos.systems"]
description = "NONOS calculator capsule"

[[bin]]
name = "calculator"
path = "src/main.rs"

[dependencies]
nonos_libc = { package = "nonos_userland_libc", path = "../libc" }
nonos_app_skeleton = { path = "../app_skeleton" }

[profile.release]
panic = "abort"
opt-level = 2
lto = false
debug = false
strip = true

[profile.dev]
panic = "abort"
opt-level = 0
debug = true
