# NONOS userland: capsule_crypto
# eK@nonos.systems
#
# Shared crypto-service capsule. Owns hashing today (BLAKE3, SHA3-256);
# symmetric/AEAD and asymmetric/PQC ops fold in as later slices. Each
# op is cap-gated at the kernel-side client; the capsule itself never
# sees a caller-supplied authority.

[package]
name = "nonos_capsule_crypto"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0"
authors = ["eK@nonos.systems"]
description = "NONOS crypto-service capsule (hashing first)"

[[bin]]
name = "crypto"
path = "src/main.rs"

[dependencies]
nonos_libc = { package = "nonos_userland_libc", path = "../libc" }
blake3 = { version = "1.0", default-features = false }
sha2   = { version = "0.10", default-features = false, features = ["force-soft"] }
sha3   = { version = "0.10", default-features = false }
digest = { version = "0.10", default-features = false }

[profile.release]
panic    = "abort"
opt-level = 2
lto      = false
debug    = false
strip    = true

[profile.dev]
panic    = "abort"
opt-level = 0
debug    = true
