# NONOS userland: capsule_driver_ahci
# eK@nonos.systems
#
# AHCI controller capsule. The capsule uses only the Mk syscall ABI:
# broker device discovery/claim, MMIO map, IRQ bind, PCI config bus
# mastering, and IPC replies. No kernel driver imports and no block
# device contract until the AHCI command/DMA path is implemented.

[package]
name = "nonos_capsule_driver_ahci"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0"
authors = ["eK@nonos.systems"]
description = "NONOS userland AHCI SATA controller driver capsule"

[[bin]]
name = "driver_ahci"
path = "src/main.rs"

[dependencies]
nonos_libc = { package = "nonos_userland_libc", path = "../libc" }

[profile.release]
panic = "abort"
opt-level = 2
lto = false
debug = false
strip = true
