# NONOS userland: capsule_driver_e1000
# eK@nonos.systems
#
# Userland Intel 8254x ("e1000") gigabit driver capsule. Drives a
# real e1000-class NIC (vendor 0x8086, device 0x100E in QEMU) through
# the kernel hardware broker (MkDeviceList / MkDeviceClaim /
# MkMmioMap / MkIrqBind / MkDmaMap). Frames only — no IP, no TCP,
# no ARP. The wire protocol mirrors `capsule_driver_virtio_net` so
# the kernel-side network client can treat both as drop-in NIC
# backends.

[package]
name = "nonos_capsule_driver_e1000"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0"
authors = ["eK@nonos.systems"]
description = "NONOS userland Intel e1000 driver capsule"

[[bin]]
name = "driver_e1000"
path = "src/main.rs"

[dependencies]
nonos_libc = { package = "nonos_userland_libc", path = "../libc" }

[profile.release]
panic = "abort"
opt-level = 2
lto = false
debug = false
strip = true
